# abeja-platform-sdk

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  Pipfile  README.md  pyproject.toml  requirements-doc.txt  setup.py
.circleci/: bump_version_rc.sh  config.yml
abeja/: __init__.py  base_client.py  logging.py  version.py
abeja/common/: api_client.py  auth.py  config.py  connection.py  docker_image_name.py  exec_env.py  file_factory.py  file_helpers.py  file_utils.py  http_file.py  instance_type.py  iterator.py  local_file.py  public_file.py  s3etag.py  source_data.py  utils.py
abeja/contrib/keras/: callbacks.py
abeja/datalake/: __init__.py  channel.py  client.py  file.py  metadata.py  storage_type.py
abeja/datalake/api/: client.py
abeja/datasets/: __init__.py  base.py  client.py  dataset.py  dataset_item.py
abeja/datasets/api/: client.py
abeja/deployments/: __init__.py
abeja/deployments/api/: client.py
abeja/endpoints/: __init__.py
abeja/endpoints/api/: client.py
abeja/exceptions/: __init__.py
abeja/models/: __init__.py
abeja/models/api/: client.py
abeja/notebook/: __init__.py  types.py
abeja/notebook/api/: client.py
abeja/opsbeellm/: __init__.py
abeja/opsbeellm/api/: client.py
abeja/opsbeellm/common/: api_client.py  connection.py  constants.py
abeja/opsbeellm/dataset/: __init__.py
abeja/opsbeellm/dataset/api/: client.py
abeja/opsbeellm/deployment/: __init__.py
abeja/opsbeellm/deployment/api/: client.py
abeja/opsbeellm/history/: __init__.py
abeja/opsbeellm/history/api/: client.py
abeja/registry/: __init__.py
abeja/registry/api/: client.py
abeja/runs/: __init__.py
abeja/runs/api/: client.py
abeja/secret/: __init__.py
abeja/secret/api/: client.py  integration_service_type.py
abeja/secret_manager/secret/: __init__.py
abeja/secret_manager/secret/api/: client.py
abeja/secret_manager/secret_version/: __init__.py
abeja/secret_manager/secret_version/api/: client.py
abeja/secret_version/: __init__.py
abeja/secret_version/api/: client.py
abeja/security/: __init__.py
abeja/security/api/: client.py
abeja/services/: __init__.py
abeja/services/api/: client.py
abeja/tracking/: __init__.py  metric.py
abeja/train/: __init__.py  client.py  instance_type.py  statistics.py
abeja/train/api/: client.py
abeja/training/: __init__.py  client.py  common.py  instance_type.py  job.py  job_definition.py  job_definition_version.py  job_status.py  model.py  statistics.py
abeja/training/api/: client.py
abeja/triggers/: __init__.py
abeja/triggers/api/: client.py
abeja/user/: __init__.py  user.py
doc/: README.md
doc/source/: Makefile  conf.py  index.rst  make.bat
doc/source/_templates/: sidebarlogo.html
doc/source/common/: exec_env.rst  instance_type.rst
doc/source/datalake/: index.rst  sample_tutorial.rst
doc/source/datalake/apis/: api_client.rst  client.rst
doc/source/dataset/: index.rst  sample_tutorial.rst
doc/source/dataset/apis/: api_client.rst  client.rst
doc/source/deployments/: index.rst
doc/source/deployments/apis/: api_client.rst
doc/source/endpoints/: index.rst
doc/source/endpoints/apis/: api_client.rst
doc/source/models/: index.rst
doc/source/models/apis/: api_client.rst
doc/source/notebooks/: index.rst
doc/source/notebooks/apis/: api_client.rst
doc/source/opsbeellm/: index.rst
doc/source/opsbeellm/apis/: api_client.rst
doc/source/registry/: index.rst
doc/source/registry/apis/: api_client.rst
doc/source/runs/: index.rst
doc/source/runs/apis/: api_client.rst
doc/source/secret/: index.rst
doc/source/secret_version/: index.rst
doc/source/security/: index.rst
doc/source/services/: index.rst
doc/source/train/: index.rst  sample_tutorial.rst
doc/source/training/: index.rst  sample_tutorial.rst
doc/source/triggers/: index.rst
integration_tests/datalake/: test_client.py
tests/: conftest.py  utils.py
tests/common/: test_auth.py  test_connection.py  test_docker_image_name.py  test_file_factory.py  test_file_helpers.py  test_http_file.py  test_instance_type.py  test_local_file.py
tests/contrib/keras/: test_callbacks.py
tests/datalake/: test_channel.py  test_file.py  test_metadata.py
tests/datalake/api/: test_client.py
tests/datasets/: test_base.py  test_client.py  test_dataset.py  test_dataset_item.py
tests/datasets/api/: test_client.py
tests/deployments/api/: test_client.py
tests/endpoints/api/: test_client.py
tests/models/api/: test_client.py
tests/notebook/api/: test_client.py
tests/opsbeellm/api/: test_client.py
tests/registry/api/: test_client.py
tests/runs/api/: test_client.py
tests/security/api/: test_client.py
tests/services/api/: test_client.py
tests/tracking/: test_metric.py  test_tracking.py
tests/train/: test_client.py
tests/train/api/: test_client.py
tests/training/: conftest.py  test_client.py  test_job.py  test_job_definitio_version.py  test_job_definition.py  test_model.py
tests/training/api/: test_client.py
tests/triggers/api/: test_client.py
tools/: add_rc_version.py  bump_version.sh  trigger_build_system_test.py
(+14 files in other folders)
