[tool]
[tool.poetry]
name = "abeja-sdk"
version = "2.1.1"
description = "ABEJA Platform Software Development Kit"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.6",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP",
    "Operating System :: OS Independent"
]
authors = ["ABEJA Inc. <platform-support@abejainc.com>"]
license = "Apache-2.0"
packages = [
    { include = "abeja" }
]
include = ["abeja/training/py.typed"]

[tool.poetry.dependencies]
python = "~=3.6"
requests = "~=2.18"
retrying = "~=1.3.3"
tensorboardx = "==1.8"
tomlkit = "^0.5.11"
typing-extensions = "~=3.7"
# Specify less than version 4 of protobuf as a dependency to prevent tensorboardX from breaking.
# see https://github.com/lanpa/tensorboardX/issues/663
protobuf = "<4"
Sphinx = {version = "==1.6.7", optional = true }
guzzle_sphinx_theme = {version = "==0.7.11", optional = true }
importlib-metadata = {version = "^2.0.0", optional = true}
virtualenv = {version = "^20.0.33", optional = true}

[tool.poetry.dev-dependencies]
autopep8 = "==1.3.2"
flake8 = "==4.0.1"
flake8-print = "==4.0.0"
keras = "~=2.2.0"
mock = "==2.0.0"
parameterized = "==0.6.1"
pytest = "==5.2.1"
pytest-cov = "==2.6.1"
requests-mock = "~=1.8"
tensorflow = "~=1.13.0"
pre-commit = "2.1.1"
mypy = "^0.770"

[tool.poetry.extras]
docs = ["Sphinx", "guzzle_sphinx_theme", "importlib-metadata", "virtualenv"]
