[tool]
[tool.poetry]
name = "abeja-sdk"
version = "2.3.5"
description = "ABEJA Platform Software Development Kit"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP",
    "Operating System :: OS Independent"
]
authors = ["ABEJA Inc. <platform-support@abejainc.com>"]
license = "Apache-2.0"
packages = [
    { include = "abeja" }
]
include = ["abeja/training/py.typed"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
retrying = "==1.3.4"
# In tensorboardX version less than 2.6.1, less than version 4 of protobuf as a dependency to prevent tensorboardX from breaking.
# see https://github.com/lanpa/tensorboardX/issues/663
# In tensorboardX version 2.6.1 or later, more than version 4 of protobuf enabled.
# see https://github.com/lanpa/tensorboardX/issues/663#issuecomment-1603240259
tensorboardx = "^2.6.1"
tomlkit = ">=0.7.0,<1.0.0"
# tensorflow 2.10.0 requires protobuf 3.20.2 or later
protobuf = ">=3.20.2,<6.0.0"
Sphinx = {version = "==3.4.0", optional = true }
guzzle_sphinx_theme = {version = "==0.7.11", optional = true }
importlib-metadata = {version = "^2.0.0", optional = true}
virtualenv = {version = "==20.0.34", optional = true}
jinja2 = {version = "==3.0.3", optional = true}
requests = ">=2.27.1"

[tool.poetry.dev-dependencies]
autopep8 = "==1.5.7"
flake8 = "==4.0.1"
flake8-print = "==4.0.0"
mock = "==5.0.0"
parameterized = "==0.6.1"
pytest = "==5.4.2"
pytest-cov = "==3.0.0"
requests-mock = "==1.9.0"
pre-commit = "2.8.0"
mypy = "0.800"
# tensorflow 2.10.0 requires protobuf 3.20.2 or later
# tensorflow 2.12.0 or later requires protobuf 4.0.0 or later
tensorflow = "^2.10.0"

[tool.poetry.extras]
docs = ["Sphinx", "guzzle_sphinx_theme", "importlib-metadata", "virtualenv", "jinja2"]
